# PuppetMaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: PuppetMasterConfig.cmake.in
cmake/puppet_master/: version.h.in
demo/: CMakeLists.txt  compatibility_facade_demo.cpp  component_model_demo.cpp  configuration_system_demo.cpp  inmemory_pubsub_demo.cpp  observability_demo.cpp  runtime_context_demo.cpp  scheduler_triggers_demo.cpp  skeleton_demo.cpp
docs/: architecture.md  compatibility-facade.md  component-model.md  configuration.md  core.md  fastdds-adapter.md  inmemory-transport.md  observability.md  runtime.md  scheduler.md  transport.md
include/puppet_master/: export.h  puppet_master.h
include/puppet_master/compat/: itage_facade.h
include/puppet_master/configuration/: configuration.h
include/puppet_master/core/: message_policy.h  result.h  status.h  types.h
include/puppet_master/logging/: log.h  logger.h
include/puppet_master/observability/: goodlog_sink.h  observability.h
include/puppet_master/runtime/: component.h  context.h  registry.h
include/puppet_master/scheduler/: scheduler.h
include/puppet_master/transport/: message.h  registry.h  transport.h
include/puppet_master/transport/fastdds/: fastdds_transport.h  options.h  policy_mapping.h
include/puppet_master/transport/inmemory/: inmemory_transport.h
src/: CMakeLists.txt  README.md  puppet_master.cpp
src/base/: base_queue.h  bounded_queue.h  period_clock.cpp  period_clock.h  thread_pool.hpp  time_stamp.hpp  unbounded_queue.h
src/base/base_communication/: node_base.h  reader_base.h  writer_base.h
src/common/: attributes.h  common_macros.h  namespace_macros.h
src/communication/base_class/: comm_base.h  reader_base.h  writer_base.h
src/communication/fastdds/: dds_node.cpp  dds_node.h  dds_node_impl.cpp  dds_node_impl.h  dds_reader.cpp  dds_reader.h  dds_writer.cpp  dds_writer.h  qos_profile_conf.h
src/compat/: itage_facade.cpp
src/configuration/: configuration.cpp
src/logger/: log.hpp
src/logging/: logging.cpp
src/observability/: goodlog_sink.cpp  observability.cpp
src/runtime/: component.cpp  context.cpp
src/scheduler/: scheduler.cpp
src/tools/: period_clock.cpp  period_clock.h  thread_pool.hpp
src/transport/fastdds/: CMakeLists.txt  fastdds_transport.cpp
src/transport/inmemory/: inmemory_transport.cpp
src/utils/: thread_pool.hpp  time_stamp.hpp
src/utils/logger/: log.hpp  text_file_backend_self_defined.cpp  text_file_backend_self_defined.hpp
src/utils/queue/: base_queue.h  bounded_queue.h  unbounded_queue.h
src/utils/timer/: period_clock.cpp  period_clock.h
test/: CMakeLists.txt  compatibility_facade_test.cpp  component_model_test.cpp  configuration_system_test.cpp  core_types_test.cpp  fastdds_policy_mapping_test.cpp  goodlog_sink_test.cpp  inmemory_transport_test.cpp  logging_test.cpp  observability_core_test.cpp  project_skeleton_test.cpp  runtime_context_test.cpp  scheduler_triggers_test.cpp  transport_abstraction_test.cpp  transport_observability_test.cpp
